--- a/src/assets/sass/_Mixins.scss
+++ b/src/assets/sass/_Mixins.scss
@@ -15,7 +15,7 @@
     border-radius: 10px;
     cursor: pointer;
 }
-@mixin primaryButton {
+@mixin primaryButton() {
     @include buttonSizes;
     color: white;
     background-color: $primaryColor;
