--- a/src/components/Common/Footer/Footer.module.scss
+++ b/src/components/Common/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/styles.scss';
+@import '../../../assets/sass/styles.scss';
 
 @media screen and (min-width : 320px) and (max-width : 767px) {
     .sec__8 {
