--- a/src/components/Common/Support/Support.module.scss
+++ b/src/components/Common/Support/Support.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/styles.scss';
+@import '../../../assets/sass/styles.scss';
 
 @media screen and (min-width : 320px) {
     .sec__7 {
