--- a/src/components/RegisterComps/Result/Result.module.scss
+++ b/src/components/RegisterComps/Result/Result.module.scss
@@ -1,6 +1,59 @@
 @import '../../../assets/sass/styles';
 
-@media screen and (min-width : 320px) {}
+@media screen and (min-width : 320px) {
+    .container {
+        width: 80%;
+        margin: 0 auto;
+
+        .header {
+            width: 100%;
+            @include flex(row, space-around, center);
+            .photo {
+                width: 110px;
+                height: 110px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                background-color: rgb(199, 194, 194);
+            }
+        }
+        .content {
+            width: 100%;
+            @include flex(column, space-between, unset)
+        }
+        .footer {
+            width: 100%;
+            @include flex(row, space-between,unset)
+        }
+        .btns {
+            width: 100%;
+            @include flex(row, space-between, unset);
+            button:first-child {
+                width: 140px;
+                height: 52px;
+                border: 1px solid $primaryColor;
+                background-color: white;
+                border-radius: 10px;
+                color: $primaryColor;
+                font-weight: bold;
+                font-size: 16px;
+                cursor: pointer;
+            }
+            button:last-child {
+                width: 140px;
+                height: 52px;
+                border: none;
+                background-color: $primaryColor;
+                border-radius: 10px;
+                color: white;
+                font-weight: bold;
+                font-size: 16px;
+                cursor: pointer;
+            }
+        }
+    }
+}
 
 
 @media screen and (min-width : 1024px) {
@@ -12,9 +65,13 @@
             width: 30%;
             @include flex(row, space-between, unset);
             .photo {
-                width: 80px;
-                height: 80px;
-                border: 1px solid red;
+                width: 110px;
+                height: 110px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                background-color: rgb(199, 194, 194);
             }
         }
         .content {
@@ -37,6 +94,7 @@
                 color: $primaryColor;
                 font-weight: bold;
                 font-size: 16px;
+                cursor: pointer;
             }
             button:last-child {
                 width: 170px;
@@ -47,6 +105,7 @@
                 color: white;
                 font-weight: bold;
                 font-size: 16px;
+                cursor: pointer;
             }
         }
     }
